--- a/package.json
+++ b/package.json
@@ -1,34 +1,55 @@
 {
-  "name": "fe_defrost",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@react-spring/web": "^9.7.5",
-    "@tabler/icons-react": "^3.30.0",
-    "clsx": "^2.1.1",
-    "lucide-react": "^0.475.0",
-    "motion": "^12.4.3",
-    "next": "13.5.8",
-    "ogl": "^1.0.11",
-    "react": "^18",
-    "react-dom": "^18",
-    "tailwind-merge": "^3.0.1"
-  },
-  "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10",
-    "eslint": "^8",
-    "eslint-config-next": "13.5.8",
-    "postcss": "^8",
-    "tailwindcss": "^3",
-    "typescript": "^5"
-  }
+	"name": "fe_defrost",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint",
+		"lint:fix": "next lint --fix",
+		"format": "prettier --write .",
+		"prepare": "husky install"
+	},
+	"lint-staged": {
+		"*.{js,jsx,ts,tsx}": [
+			"eslint --fix",
+			"prettier --write"
+		],
+		"*.{json,css,md}": [
+			"prettier --write"
+		]
+	},
+	"dependencies": {
+		"@react-spring/web": "^9.7.5",
+		"@tabler/icons-react": "^3.30.0",
+		"clsx": "^2.1.1",
+		"lucide-react": "^0.475.0",
+		"motion": "^12.4.3",
+		"next": "13.5.8",
+		"ogl": "^1.0.11",
+		"react": "^18",
+		"react-dom": "^18",
+		"tailwind-merge": "^3.0.1"
+	},
+	"devDependencies": {
+		"@commitlint/cli": "^19.7.1",
+		"@commitlint/config-conventional": "^19.7.1",
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"@typescript-eslint/eslint-plugin": "^6.21.0",
+		"@typescript-eslint/parser": "^6.21.0",
+		"autoprefixer": "^10",
+		"eslint": "^8",
+		"eslint-config-next": "13.5.8",
+		"eslint-config-prettier": "^10.0.1",
+		"eslint-plugin-prettier": "^5.2.3",
+		"husky": "^9.1.7",
+		"lint-staged": "^15.4.3",
+		"postcss": "^8",
+		"prettier": "^3.5.1",
+		"tailwindcss": "^3",
+		"typescript": "^5"
+	}
 }
