--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 		"@react-spring/web": "^9.7.5",
 		"@tabler/icons-react": "^3.30.0",
 		"clsx": "^2.1.1",
+		"framer-motion": "^12.5.0",
 		"lucide-react": "^0.475.0",
 		"motion": "^12.4.3",
 		"next": "13.5.8",
@@ -51,5 +52,6 @@
 		"prettier": "^3.5.1",
 		"tailwindcss": "^3",
 		"typescript": "^5"
-	}
+	},
+	"packageManager": "pnpm@10.4.0+sha512.6b849d0787d97f8f4e1f03a9b8ff8f038e79e153d6f11ae539ae7c435ff9e796df6a862c991502695c7f9e8fac8aeafc1ac5a8dab47e36148d183832d886dd52"
 }
