--- a/package.json
+++ b/package.json
@@ -21,16 +21,19 @@
 		]
 	},
 	"dependencies": {
+		"@react-spring/parallax": "^9.7.5",
 		"@react-spring/web": "^9.7.5",
 		"@tabler/icons-react": "^3.30.0",
 		"clsx": "^2.1.1",
 		"framer-motion": "^12.5.0",
+		"gsap": "^3.12.7",
 		"lucide-react": "^0.475.0",
 		"motion": "^12.4.3",
 		"next": "13.5.8",
 		"ogl": "^1.0.11",
 		"react": "^18",
 		"react-dom": "^18",
+		"react-scroll-parallax": "^3.4.5",
 		"tailwind-merge": "^3.0.1"
 	},
 	"devDependencies": {
