--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
 		"react": "^18",
 		"react-dom": "^18",
 		"react-scroll-parallax": "^3.4.5",
-		"tailwind-merge": "^3.0.2"
+		"tailwind-merge": "^3.0.2",
+		"uuid": "^11.1.0"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^19.7.1",
@@ -44,6 +45,7 @@
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
+		"@types/uuid": "^10.0.0",
 		"@typescript-eslint/eslint-plugin": "^6.21.0",
 		"@typescript-eslint/parser": "^6.21.0",
 		"autoprefixer": "^10",
