--- a/package.json
+++ b/package.json
@@ -22,12 +22,15 @@
 	},
 	"dependencies": {
 		"@prisma/client": "^6.6.0",
+		"@radix-ui/react-dialog": "^1.1.7",
+		"@radix-ui/react-tooltip": "^1.2.0",
 		"@react-spring/parallax": "^9.7.5",
 		"@react-spring/web": "^9.7.5",
 		"@splidejs/react-splide": "^0.7.12",
 		"@splidejs/splide": "^4.1.4",
 		"@splinetool/react-spline": "^4.0.0",
 		"@tabler/icons-react": "^3.30.0",
+		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"framer-motion": "^12.5.0",
 		"gsap": "^3.12.7",
@@ -40,6 +43,7 @@
 		"react-dom": "^18",
 		"react-scroll-parallax": "^3.4.5",
 		"tailwind-merge": "^3.0.2",
+		"tailwindcss-animate": "^1.0.7",
 		"uuid": "^11.1.0"
 	},
 	"devDependencies": {
