--- a/package.json
+++ b/package.json
@@ -26,12 +26,16 @@
 		"@radix-ui/react-tooltip": "^1.2.0",
 		"@react-spring/parallax": "^9.7.5",
 		"@react-spring/web": "^9.7.5",
+		"@reown/appkit": "^1.7.2",
+		"@reown/appkit-adapter-wagmi": "^1.7.2",
 		"@splidejs/react-splide": "^0.7.12",
 		"@splidejs/splide": "^4.1.4",
 		"@splinetool/react-spline": "^4.0.0",
 		"@tabler/icons-react": "^3.30.0",
+		"@tanstack/react-query": "^5.74.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
+		"ethers": "^6.13.5",
 		"framer-motion": "^12.5.0",
 		"gsap": "^3.12.7",
 		"lucide-react": "^0.475.0",
@@ -44,7 +48,8 @@
 		"react-scroll-parallax": "^3.4.5",
 		"tailwind-merge": "^3.0.2",
 		"tailwindcss-animate": "^1.0.7",
-		"uuid": "^11.1.0"
+		"viem": "^2.27.0",
+		"wagmi": "^2.14.16"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^19.7.1",
