chore: misc components config

--- a/components.json
+++ b/components.json
@@ -13,9 +13,9 @@
 	"aliases": {
 		"components": "@/app/components",
 		"utils": "@/lib/utils",
-		"ui": "@/app/components/UI/shadcn",
-		"lib": "@/app/lib",
-		"hooks": "@/app/hooks"
+		"ui": "@/components/UI",
+		"lib": "@/lib",
+		"hooks": "@/hooks"
 	},
 	"iconLibrary": "lucide"
 }
