chore: add some libs and update css

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"@splidejs/splide": "^4.1.4",
 		"@splinetool/react-spline": "^4.0.0",
 		"@tabler/icons-react": "^3.30.0",
+		"apexcharts": "^4.5.0",
 		"@tanstack/react-query": "^5.74.3",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
@@ -41,11 +42,14 @@
 		"lucide-react": "^0.475.0",
 		"motion": "^12.5.0",
 		"next": "13.5.8",
+		"next-view-transitions": "^0.3.4",
 		"ogl": "^1.0.11",
 		"prisma": "^6.6.0",
 		"react": "^18",
+		"react-apexcharts": "^1.7.0",
 		"react-dom": "^18",
 		"react-scroll-parallax": "^3.4.5",
+		"react-toastify": "^11.0.5",
 		"tailwind-merge": "^3.0.2",
 		"tailwindcss-animate": "^1.0.7",
 		"viem": "^2.27.0",
