--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
 		"react-scroll-parallax": "^3.4.5",
 		"tailwind-merge": "^3.0.2",
 		"tailwindcss-animate": "^1.0.7",
+		"uuid": "^11.1.0",
 		"viem": "^2.27.0",
 		"wagmi": "^2.14.16"
 	},
