--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
 		"@splidejs/splide": "^4.1.4",
 		"@splinetool/react-spline": "^4.0.0",
 		"@tabler/icons-react": "^3.30.0",
-		"apexcharts": "^4.5.0",
 		"@tanstack/react-query": "^5.74.3",
+		"apexcharts": "^4.5.0",
 		"class-variance-authority": "^0.7.1",
 		"clsx": "^2.1.1",
 		"ethers": "^6.13.5",
@@ -53,7 +53,8 @@
 		"tailwind-merge": "^3.0.2",
 		"tailwindcss-animate": "^1.0.7",
 		"viem": "^2.27.0",
-		"wagmi": "^2.14.16"
+		"wagmi": "^2.14.16",
+		"zustand": "^5.0.3"
 	},
 	"devDependencies": {
 		"@commitlint/cli": "^19.7.1",
