--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"lint": "next lint",
 		"lint:fix": "next lint --fix",
 		"format": "prettier --write .",
-		"prepare": "husky"
+		"prepare": "husky",
+		"typechain": "typechain --target ethers-v6 --out-dir ./app/types/typechain ./abi/*.json"
 	},
 	"lint-staged": {
 		"*.{js,jsx,ts,tsx}": [
@@ -76,6 +77,7 @@
 		"postcss": "^8",
 		"prettier": "^3.5.1",
 		"tailwindcss": "^3",
+		"typechain": "^8.3.2",
 		"typescript": "^5"
 	},
 	"packageManager": "pnpm@10.4.0+sha512.6b849d0787d97f8f4e1f03a9b8ff8f038e79e153d6f11ae539ae7c435ff9e796df6a862c991502695c7f9e8fac8aeafc1ac5a8dab47e36148d183832d886dd52"
