--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
 	"devDependencies": {
 		"@commitlint/cli": "^19.7.1",
 		"@commitlint/config-conventional": "^19.7.1",
+		"@types/decimal.js": "^7.4.3",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
@@ -68,6 +69,7 @@
 		"@typescript-eslint/eslint-plugin": "^6.21.0",
 		"@typescript-eslint/parser": "^6.21.0",
 		"autoprefixer": "^10",
+		"decimal.js": "^10.5.0",
 		"eslint": "^8",
 		"eslint-config-next": "13.5.8",
 		"eslint-config-prettier": "^10.0.1",
