--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	"dependencies": {
 		"@prisma/client": "^6.6.0",
 		"@radix-ui/react-dialog": "^1.1.7",
+		"@radix-ui/react-tabs": "^1.1.9",
 		"@radix-ui/react-tooltip": "^1.2.0",
 		"@react-spring/parallax": "^9.7.5",
 		"@react-spring/web": "^9.7.5",
