--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"next": "13.5.8",
 		"next-view-transitions": "^0.3.4",
 		"ogl": "^1.0.11",
+		"pino-pretty": "^13.0.0",
 		"prisma": "^6.6.0",
 		"react": "^18",
 		"react-apexcharts": "^1.7.0",
