--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"react-dom": "^18",
 		"react-scroll-parallax": "^3.4.5",
 		"react-toastify": "^11.0.5",
+		"superjson": "^2.2.2",
 		"tailwind-merge": "^3.0.2",
 		"tailwindcss-animate": "^1.0.7",
 		"uuid": "^11.1.0",
